--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
@@ -7,10 +8,40 @@
     <title>Document</title>
     <title>ALURA FLIX</title>
 </head>
+
 <body>
-   <header>Alura flix</header> 
-<h1>Através do aranhaverso supera o primeiro filme?</h1>
-<p>#homem-aranha</p>
-<iframe width="853" height="480" src="https://www.youtube.com/embed/87dLJt0eD3k" title="SPIDER-MAN 4: HOME RUN - TRAILER DUBLADO (HD)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <header>Alura flix</header>
+    <section>
+        <div class="chamada-texto">
+            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <p>#homem-aranha</p>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+    <section class="categoria">
+  <h2>Filmes e séries</h2>
+  <div class="categoria-videos">
+    <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+      <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+    </a>
+    <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+      <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+    </a>
+    <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+      <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+    </a>
+    <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+      <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+    </a>
+    <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+      <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+    </a>
+  </div>
+</section>
 </body>
 </html>
